<resources>
    <string name="app_name">Languageco</string>
    <string name="navigation_drawer_open" translatable="false">Open Navigation</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation</string>
    <string name="nav_drawer_achievements">Достижения</string>
    <string name="nav_drawer_cards">Карточки</string>
    <string name="nav_drawer_phrasebook">Разговорник</string>
    <string name="nav_drawer_settings">Настройки</string>
    <string name="nav_drawer_dictionary">Словарь</string>
    <string name="nav_drawer_trainings">Тренировки</string>
    <string name="nav_drawer_exit">Выход</string>
    <string name="stub_username">Имя пользователя</string>
    <string name="stub_profileInfo">Информация о профиле</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password_confirm">Confirm</string>
    <string name="register">Register</string>
    <string name="login_enter">Enter your login</string>
    <string name="recover">Recover</string>
    <string name="age">Age</string>
    <string name="password_old">Old password</string>
    <string name="save_button_title">Сохранить</string>
    <string name="action_edit">Edit</string>
    <string name="profile_details">Профиль</string>
    <string name="stub_phrase_category_examples">Приветствие, комплименты</string>
    <string name="stud_phrase_category">ПОВСЕДНЕВНЫЕ ФРАЗЫ</string>
    <string name="stub_dictionary_text">ability</string>
    <string name="search_hint">Search</string>
    <string name="percent">%</string>
    <string name="default_username">Сергей Валевич</string>
    <string name="default_user_email">sergeyvalevich@gmail.com</string>
    <string name="auth_dialog_content">Please wait</string>
    <string name="auth_dialog_message">Authorization</string>
    <string name="progress_dialog_tag">progress</string>
    <string name="invalid_credentials_msg">Invalid credentials</string>
    <string name="short_login_msg">Login must contain at least 3 symbols</string>
    <string name="short_pass_msg">Password must contain at least 6 symbols</string>
    <string name="invalid_email_msg">Invalid email</string>
    <string name="empty_fields_msg">Please fill in all the required fields</string>
    <string name="password_confirm_failed_msg">Passwords mismatch</string>
    <string name="recover_dialog_message">Recovering</string>
    <string name="share_dialog_msg">share_with</string>
    <string name="button_next">CONTINUE</string>
</resources>
