<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/root"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/fon_leves"
              android:orientation="vertical"
              android:padding="@dimen/login_general_vertical_padding">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/auth_title_size"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/input_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:background="@drawable/bg_round"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLength="20"
            android:paddingEnd="@dimen/hint_padding"
            android:paddingLeft="@dimen/hint_padding"
            android:paddingRight="@dimen/hint_padding"
            android:paddingStart="@dimen/hint_padding"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:background="@drawable/bg_round"
            android:hint="@string/surname"
            android:inputType="text"
            android:maxLength="20"
            android:paddingEnd="@dimen/hint_padding"
            android:paddingLeft="@dimen/hint_padding"
            android:paddingRight="@dimen/hint_padding"
            android:paddingStart="@dimen/hint_padding"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:background="@drawable/bg_round"
            android:hint="@string/login"
            android:inputType="text"
            android:maxLength="15"
            android:paddingEnd="@dimen/hint_padding"
            android:paddingLeft="@dimen/hint_padding"
            android:paddingRight="@dimen/hint_padding"
            android:paddingStart="@dimen/hint_padding"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:background="@drawable/bg_round"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="254"
            android:paddingEnd="@dimen/hint_padding"
            android:paddingLeft="@dimen/hint_padding"
            android:paddingRight="@dimen/hint_padding"
            android:paddingStart="@dimen/hint_padding"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:background="@drawable/bg_round"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingEnd="@dimen/hint_padding"
            android:paddingLeft="@dimen/hint_padding"
            android:paddingRight="@dimen/hint_padding"
            android:paddingStart="@dimen/hint_padding"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:background="@drawable/bg_round"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingEnd="@dimen/hint_padding"
            android:paddingLeft="@dimen/hint_padding"
            android:paddingRight="@dimen/hint_padding"
            android:paddingStart="@dimen/hint_padding"
            android:singleLine="true"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:background="@color/button"
            android:text="@string/register"
            android:textColor="@color/colorTextWhite"/>

    </LinearLayout>


</LinearLayout>